--- a/html/projects/my_ls.html
+++ b/html/projects/my_ls.html
@@ -22,5 +22,14 @@
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
         </div>
+        <div>
+            <output></output>
+                <div id="input-line" class="input-line">
+                    <div class="prompt"></div><div><input class="cmdline" autofocus /></div>
+                </div>
+            <!--<script src="http://www.codehelper.io/api/ips/?js"></script>-->
+            <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+            <script src="https://s.codepen.io/AndrewBarfield/pen/LEbPJx.js"></script>
+        </div>
     </body>
 </html>
