--- a/html/projects/my_ls.html
+++ b/html/projects/my_ls.html
@@ -12,7 +12,122 @@
             $(function(){
                 $("#header").load("/html/header.html"); 
             });
-        </script> 
+            $(function() {
+  
+            // Set the command-line prompt to include the user's IP Address
+            //$('.prompt').html('[' + codehelper_ip["IP"] + '@HTML5] # ');
+                $('.prompt').html('[user@HTML5] # ');
+
+            // Initialize a new terminal object
+            var term = new Terminal('#input-line .cmdline', '#container output');
+            term.init();
+            
+            // Update the clock every second
+            setInterval(function() {
+                function r(cls, deg) {
+                $('.' + cls).attr('transform', 'rotate('+ deg +' 50 50)')
+                }
+                var d = new Date()
+                r("sec", 6*d.getSeconds())  
+                r("min", 6*d.getMinutes())
+                r("hour", 30*(d.getHours()%12) + d.getMinutes()/2)
+            }, 1000);
+            
+            });
+        </script>
+        <style>
+            #prompter {
+            padding: .1em 1.5em 1em 1em;
+            }
+            #prompter output {
+            clear: both;
+            width: 100%;
+            }
+            #prompter output h3 {
+            margin: 0;
+            }
+            #prompter output pre {
+            margin: 0;
+            }
+            .input-line {
+            display: -webkit-box;
+            -webkit-box-orient: horizontal;
+            -webkit-box-align: stretch;
+            display: -moz-box;
+            -moz-box-orient: horizontal;
+            -moz-box-align: stretch;
+            display: box;
+            box-orient: horizontal;
+            box-align: stretch;
+            clear: both;
+            }
+            .input-line > div:nth-child(2) {
+            -webkit-box-flex: 1;
+            -moz-box-flex: 1;
+            box-flex: 1;
+            }
+            .prompt {
+            white-space: nowrap;
+            color: #96b38a;
+            margin-right: 7px;
+            display: -webkit-box;
+            -webkit-box-pack: center;
+            -webkit-box-orient: vertical;
+            display: -moz-box;
+            -moz-box-pack: center;
+            -moz-box-orient: vertical;
+            display: box;
+            box-pack: center;
+            box-orient: vertical;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+            }
+            .cmdline {
+            outline: none;
+            background-color: transparent;
+            margin: 0;
+            width: 100%;
+            font: inherit;
+            border: none;
+            color: inherit;
+            }
+            .ls-files {
+            height: 45px;
+            -webkit-column-width: 100px;
+            -moz-column-width: 100px;
+            -o-column-width: 100px;
+            column-width: 100px;
+            }
+
+
+            /************************************************************/
+            /* SVG Clock                                                */
+            /************************************************************/
+
+            .clock-container {
+            display: none /*inline-block*/;
+            position: relative;
+            width: 200px;
+            vertical-align: middle;
+            overflow: hidden;
+            } 
+
+            .clock-container > svg > circle {
+            stroke-width: 2px;
+            stroke: #fff;
+            }
+
+            .hour, .min, .sec { 
+            stroke-width: 1px;
+            fill: #333;
+            stroke: #555;
+            }
+
+            .sec {
+            stroke: #f55;
+            }
+        </style>
     </head>
     <body>
         <div id="header"></div>
