--- a/html/projects/my_ls.html
+++ b/html/projects/my_ls.html
@@ -22,5 +22,8 @@
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
         </div>
+        <div>
+            <a>Le but du projet "my_ls" est de coder un programme similaire à la commande "ls" d'un interpréteur de commande.</a>
+        </div>
     </body>
 </html>
