--- a/html/index.html
+++ b/html/index.html
@@ -16,9 +16,9 @@
     <body>
         <div id="header"></div>
         <div class="container">
-            <h3>Collapsible Navbar</h3>
-            <p>In this example, the navigation bar is hidden on small screens and replaced by a button in the top right corner (try to re-size this window).
-            <p>Only when the button is clicked, the navigation bar will be displayed.</p>
+            <h3>Louis Gaspard</h3>
+            <p>Etudiant en deuxième année à EPITECH (nantes)</p>
+            <p></p>
         </div>
     </body>
 </html>
