add printf ls & sokoban

--- a/html/about.html
+++ b/html/about.html
@@ -54,10 +54,10 @@
             <p class="title">Etudiant deuxième année</p>
             <p>EPITECH</p>
             <div style="margin: 24px 0;">
-                <a style="text-decoration: none;font-size: 22px; color: black;" href="#"><i class="fa fa-linkedin"></i></a> 
-                <a style="text-decoration: none;font-size: 22px; color: black;" href="#"><i class="fa fa-github"></i></a> 
+                <a style="text-decoration: none;font-size: 22px; color: black;" href="https://www.linkedin.com/in/louis-gaspard/"><i class="fa fa-linkedin"></i></a> 
+                <a style="text-decoration: none;font-size: 22px; color: black;" href="https://github.com/LouisGaspard"><i class="fa fa-github"></i></a> 
             </div>
-            <p><button href="/contact">Contact</button></p>
+            <p><button onclick="location.href='/contact'">Contact</button></p>
         </div>
     </body>
 </html>
