--- a/html/projects/my_printf.html
+++ b/html/projects/my_printf.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/html/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script> 
@@ -21,6 +22,28 @@
             <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/my_printf">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
+            <p>Le but du projet "my_printf" est de coder une fonction similaire à la celle de la librairie 'C'.</p>
+            <div class="shell-wrap">
+                <p class="shell-top-bar">/louis/projets/my_printf/</p>
+                <ul class="shell-body">
+                    <li>cat main.c</li>
+                    <p1>int main(void)</p1>
+                    <br/>
+                    <p1>{</p1>
+                    <br/>
+                    <p1>&emsp;&emsp;&emsp;&emsp;my_printf("J'ai %d ans", 20);</p1>
+                    <br/>
+                    <p1>&emsp;&emsp;&emsp;&emsp;return (0);</p1>
+                    <br/>
+                    <p1>}</p1>
+                    <br/>
+                    <br/>
+                    <li>gcc main.c -o test</li>
+                    <br/>
+                    <li>./test</li>
+                    <p>J'ai 20 ans</p>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
