--- a/html/projects/my_ls.html
+++ b/html/projects/my_ls.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/html/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script> 
@@ -21,9 +22,20 @@
             <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/my_ls">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
-        </div>
-        <div>
-            <a>Le but du projet "my_ls" est de coder un programme similaire à la commande "ls" d'un interpréteur de commande.</a>
+            <p>Le but du projet "my_ls" est de coder un programme similaire à la commande "ls" d'un interpréteur de commande.</p>
+            <div class="shell-wrap">
+                <p class="shell-top-bar">/louis/projets/my_ls/</p>
+                <ul class="shell-body">
+                    <li>./my_ls</li>
+                    <p>my_ls lib src include Makefile</p>
+                    <br/>
+                    <li>./my_ls src</li>
+                    <p>my_ls.c main.c utils.c</p>
+                    <br/>
+                    <li>./my_ls /tmp</li>
+                    <p>testfile.txt sample.tar</p>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
