--- a/html/header.html
+++ b/html/header.html
@@ -22,15 +22,15 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Maths <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/101pong">101pong</a></li>
-                            <li><a href="/101pong">101pong</a></li>
-                            <li><a href="/101pong">101pong</a></li>
-                            <li><a href="/101pong">101pong</a></li>
-                            <li><a href="/101pong">101pong</a></li>
-                            <li><a href="/101pong">101pong</a></li>
-                            <li><a href="/101pong">101pong</a></li>
-                            <li><a href="/101pong">101pong</a></li>
-                            <li><a href="/101pong">101pong</a></li>
-                            <li><a href="/101pong">101pong</a></li>
+                            <li><a href="/102architect">102architect</a></li>
+                            <li><a href="/103cipher">103cipher</a></li>
+                            <li><a href="/104intersection">104intersection</a></li>
+                            <li><a href="/105torus">105torus</a></li>
+                            <li><a href="/106bombyx">106bombyx</a></li>
+                            <li><a href="/107transfer">107transfer</a></li>
+                            <li><a href="/108trigo">108trigo</a></li>
+                            <li><a href="/109titration">109titration</a></li>
+                            <li><a href="/110borwein">110borwein</a></li>
                         </ul>
                     </li>
                 <li><a href="/about">About me</a></li>
