--- a/html/projects/my_printf.html
+++ b/html/projects/my_printf.html
@@ -22,7 +22,7 @@
             <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/my_printf">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
-            <p>Le but du projet "my_printf" est de coder une fonction similaire à la celle de la librairie 'C'.</p>
+            <p style="text-align: center">Le but du projet "my_printf" est de coder une fonction similaire à la celle de la librairie 'C'.</p>
             <div class="shell-wrap">
                 <p class="shell-top-bar">/louis/projets/my_printf/</p>
                 <ul class="shell-body">
