--- a/html/projects/maths/101pong.html
+++ b/html/projects/maths/101pong.html
@@ -22,18 +22,24 @@
             <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/my_ls">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
-            <p>Le but du projet "101pong" est de.</p>
+            <p style="text-align: center">Le but du projet "101pong" est d'afficher les coordonnées du vecteur de vitesse de la balle, les coordonnées de la balle a l'instant t+4 et si oui ou non la balle touchera la planche.</p>
             <div class="shell-wrap">
                 <p class="shell-top-bar">/louis/projets/101pong/</p>
                 <ul class="shell-body">
-                    <li>./101pong</li>
-                    <p>my_ls lib src include Makefile</p>
+                    <li>./101pong 1 3 5 7 9 -2 4</li>
+                    <p1>The speed vector coordinates are :</p1><br/>
+                    <p1>(6.00;6.00;-7.00)</p1><br/>
+                    <p1>At time t+4, ball coordinates will be :</p1><br/>
+                    <p1>(31.00;33.00;-30.00)</p1><br/>
+                    <p1>The ball won’t reach the bat.</p1><br/>
                     <br/>
-                    <li>./101pong src</li>
-                    <p>my_ls.c main.c utils.c</p>
-                    <br/>
-                    <li>./101pong /tmp</li>
-                    <p>testfile.txt sample.tar</p>
+                    <li>./101pong 1.1 3 5 -7 9 2 4</li>
+                    <p1>The speed vector coordinates are :</p1><br/>
+                    <p1>(-8.10;6.00;-3.00)</p1><br/>
+                    <p1>At time t+4, ball coordinates will be :</p1><br/>
+                    <p1>(-39.40;33.00;-10.00)</p1><br/>
+                    <p1>The incidence angle is :</p1>
+                    <p1>16.57 degrees</p1>
                 </ul>
             </div>
         </div>
