--- a/html/projects/maths/102architect.html
+++ b/html/projects/maths/102architect.html
@@ -22,18 +22,47 @@
             <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/my_ls">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
-            <p>Le but du projet "101pong" est de.</p>
+            <p style="text-align: center">Le but du projet "102architect" est de.</p>
             <div class="shell-wrap">
-                <p class="shell-top-bar">/louis/projets/101pong/</p>
+                <p class="shell-top-bar">/louis/projets/102architect/</p>
                 <ul class="shell-body">
-                    <li>./101pong</li>
-                    <p>my_ls lib src include Makefile</p>
+                    <li>./102architect 5 0 -t -1 1</li>
+                    <p1>Translation by the vector (-1, 1)</p1><br/>
+                    <p1>1.00&emsp;&emsp;0.00&emsp;&emsp;-1.00</p1><br/>
+                    <p1>0.00&emsp;&emsp;1.00&emsp;&emsp;1.00</p1><br/>
+                    <p1>0.00&emsp;&emsp;0.00&emsp;&emsp;1.00</p1><br/>
+                    <p1>(5,0) => (4.00,1.00)</p1><br/>
                     <br/>
-                    <li>./101pong src</li>
-                    <p>my_ls.c main.c utils.c</p>
+                    <li>./102architect 2 2 -h -1 1</li>
+                    <p1>Homothety by the ratios -1 and 1</p1><br/>
+                    <p1>-1.00&emsp;&emsp;0.00&emsp;&emsp;0.00</p1><br/>
+                    <p1>0.00&emsp;&emsp;1.00&emsp;&emsp;0.00</p1><br/>
+                    <p1>0.00&emsp;&emsp;0.00&emsp;&emsp;1.00</p1><br/>
+                    <p1>(2,2) => (-2.00,2.00)</p1><br/>
                     <br/>
-                    <li>./101pong /tmp</li>
-                    <p>testfile.txt sample.tar</p>
+                    <li>./102architect 1 0 -r 90</li>
+                    <p1>Rotation at a 90 degree angle</p1><br/>
+                    <p1>0.00&emsp;&emsp;-1.00&emsp;&emsp;0.00</p1><br/>
+                    <p1>1.00&emsp;&emsp;0.00&emsp;&emsp;0.00</p1><br/>
+                    <p1>0.00&emsp;&emsp;0.00&emsp;&emsp;1.00</p1><br/>
+                    <p1>(1,0) => (0.00,1.00)</p1><br/>
+                    <br/>
+                    <li>./102architect 3 -1 -s 270</li>
+                    <p1>Symmetry about an axis inclined with an angle of 270 degrees</p1><br/>
+                    <p1>-1.00&emsp;&emsp;0.00&emsp;&emsp;0.00</p1><br/>
+                    <p1>0.00&emsp;&emsp;1.00&emsp;&emsp;0.00</p1><br/>
+                    <p1>0.00&emsp;&emsp;0.00&emsp;&emsp;1.00</p1><br/>
+                    <p1>(3,-1) => (-3.00,-1.00)</p1><br/>
+                    <br/>
+                    <li> ./102architect 1 2 -t 2 3 -h 1 -2 -r 45 -s 30</li>
+                    <p1>Translation by the vector (2, 3)</p1><br/>
+                    <p1>Homothety by the ratios 1 and -2</p1><br/>
+                    <p1>Rotation at a 45 degree angle</p1><br/>
+                    <p1>Symmetry about an axis inclined with an angle of 30 degrees</p1><br/>
+                    <p1>0.97&emsp;&emsp;-0.52&emsp;&emsp;0.38</p1><br/>
+                    <p1>0.26&emsp;&emsp;1.93&emsp;&emsp;6.31</p1><br/>
+                    <p1>0.00&emsp;&emsp;0.00&emsp;&emsp;1.00</p1><br/>
+                    <p1>(1,2) => (0.31,10.44)</p1>
                 </ul>
             </div>
         </div>
