--- a/html/projects/maths/107transfer.html
+++ b/html/projects/maths/107transfer.html
@@ -22,7 +22,7 @@
             <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/my_ls">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
-            <p>Le but du projet "101pong" est de.</p>
+            <p style="text-align: center">Le but du projet "101pong" est de.</p>
             <div class="shell-wrap">
                 <p class="shell-top-bar">/louis/projets/101pong/</p>
                 <ul class="shell-body">
