--- a/html/projects/my_sokoban.html
+++ b/html/projects/my_sokoban.html
@@ -22,7 +22,7 @@
             <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/my_sokoban">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
-            <p>Le but du projet "my_sokoban" est de coder un jeu similaire au jeu Japonais "Sokoban".</p>
+            <p style="text-align: center">Le but du projet "my_sokoban" est de coder un jeu similaire au jeu Japonais "Sokoban".</p>
             <div class="shell-wrap">
                 <p class="shell-top-bar">/louis/projets/my_sokoban/</p>
                 <ul class="shell-body">
