--- a/html/header.html
+++ b/html/header.html
@@ -33,7 +33,7 @@
                             <li><a href="/110borwein">110borwein</a></li>
                         </ul>
                     </li>
-                <li><a href="/about">About me</a></li>
+                <li><a href="/about">A propos</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
         </div>
