--- a/html/projects/maths/101pong.html
+++ b/html/projects/maths/101pong.html
@@ -18,8 +18,8 @@
     <body>
         <div id="header"></div>
         <div class="container">
-            <h3>my_ls
-            <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/my_ls">
+            <h3>101pong
+            <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/101pong">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
             <p style="text-align: center">Le but du projet "101pong" est d'afficher les coordonnées du vecteur de vitesse de la balle, les coordonnées de la balle a l'instant t+4 et si oui ou non la balle touchera la planche.</p>
