--- a/html/projects/maths/102architect.html
+++ b/html/projects/maths/102architect.html
@@ -18,8 +18,8 @@
     <body>
         <div id="header"></div>
         <div class="container">
-            <h3>my_ls
-            <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/my_ls">
+            <h3>102architect
+            <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/102architect">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
             <p style="text-align: center">Le but du projet "102architect" est de.</p>
