--- a/html/projects/maths/109titration.html
+++ b/html/projects/maths/109titration.html
@@ -18,21 +18,21 @@
     <body>
         <div id="header"></div>
         <div class="container">
-            <h3>my_ls
-            <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/my_ls">
+            <h3>109titration
+            <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/109titration">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
-            <p style="text-align: center">Le but du projet "101pong" est de.</p>
+            <p style="text-align: center">Le but du projet "109titration" est de.</p>
             <div class="shell-wrap">
-                <p class="shell-top-bar">/louis/projets/101pong/</p>
+                <p class="shell-top-bar">/louis/projets/109titration/</p>
                 <ul class="shell-body">
-                    <li>./101pong</li>
+                    <li>./109titration</li>
                     <p>my_ls lib src include Makefile</p>
                     <br/>
-                    <li>./101pong src</li>
+                    <li>./109titration src</li>
                     <p>my_ls.c main.c utils.c</p>
                     <br/>
-                    <li>./101pong /tmp</li>
+                    <li>./109titration /tmp</li>
                     <p>testfile.txt sample.tar</p>
                 </ul>
             </div>
