change alert box contact

--- a/html/contact.html
+++ b/html/contact.html
@@ -6,8 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/js/bootstrap-dialog.min.js"></script>
         <script> 
             $(function(){
                 $("#header").load("/html/header.html"); 
@@ -66,7 +68,7 @@
                 if (fnameOk && mailOk && lnameOk && objectOk && messageOk)
                     return true;
                 else {
-                    alert("Veuillez remplir correctement tous les champs");
+                    BootstrapDialog.alert('Veuillez remplir correctement tous les champs');
                     return false;
                 }
             }
