--- a/html/projects/maths/103cipher.html
+++ b/html/projects/maths/103cipher.html
@@ -22,18 +22,32 @@
             <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/103cipher">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
-            <p style="text-align: center">Le but du projet "103cipher" est de.</p>
+            <p style="text-align: center">Le but du projet "103cipher" est de crypter ou decrypter une ou plusieurs phrases.</p>
             <div class="shell-wrap">
                 <p class="shell-top-bar">/louis/projets/103cipher/</p>
                 <ul class="shell-body">
-                    <li>./103cipher</li>
-                    <p>my_ls lib src include Makefile</p>
+                    <li>./103cipher "Just because I don’t care doesn’t mean I don’t understand." "Homer S" 0</li>
+                    <p1>Key matrix :</p1><br/>
+                    <p1>72&emsp;&emsp;&emsp;111&emsp;&emsp;109</p1><br/>
+                    <p1>101&emsp;&emsp;114&emsp;&emsp;32</p1><br/>
+                    <p1>83&emsp;&emsp;&emsp;0&emsp;&emsp;&emsp;&emsp;0</p1><br/>
                     <br/>
-                    <li>./103cipher src</li>
-                    <p>my_ls.c main.c utils.c</p>
+                    <p1>Encrypted message :</p1><br/>
+                    <p1>26690 21552 11810 19718 16524 13668 25322 22497 14177 28422 26097 16433 12333 11874</p1><br/>
+                    <p1>5824 27541 23754 14452 17180 17553 7963 26387 22047 13895 18804 14859 12033 27738</p1><br/>
+                    <p1>23835 15331 21487 16656 13238 21696 15978 6976 20750 23307 14093 16788 11751 8981</p1><br/>
+                    <p1>22339 24861 15619 21295 16524 13668 26403 23610 15190 29451 25764 16106 26394 23307</p1><br/>
+                    <p1>14093 3312 5106 5014</p1><br/>
                     <br/>
-                    <li>./103cipher /tmp</li>
-                    <p>testfile.txt sample.tar</p>
+                    <li>./103cipher "26690 21552 11810 19718 16524 13668 25322 22497 14177 28422 26097
+                        16433 12333 11874 5824 27541 23754 14452 17180 17553 7963 26387 22047 13895 18804 14859
+                        12033 27738 23835 15331 21487 16656 13238 21696 15978 6976 20750 23307 14093 16788 11751
+                        8981 22339 24861 15619 21295 16524 13668 26403 23610 15190 29451 25764 16106 26394 23307
+                        14093 3312 5106 5014" "Homer S" 1</li>
+                    <p1>Key matrix :</p1><br/>
+                    <p1>0.0&emsp;&emsp;&emsp;&emsp;&emsp;0.0&emsp;&emsp;&emsp;&emsp;&emsp;0.012</p1><br/>
+                    <p1>-0.004&emsp;&emsp;0.012&emsp;&emsp;&emsp;-0.012</p1><br/>
+                    <p1>0.013&emsp;&emsp;&emsp;-0.013&emsp;&emsp;0.004</p1><br/>
                 </ul>
             </div>
         </div>
