--- a/html/projects/maths/106bombyx.html
+++ b/html/projects/maths/106bombyx.html
@@ -26,16 +26,66 @@
             <div class="shell-wrap">
                 <p class="shell-top-bar">/louis/projets/106bombyx/</p>
                 <ul class="shell-body">
-                    <li>./106bombyx</li>
-                    <p>my_ls lib src include Makefile</p>
+                    <li>./106bombyx 10 10000 10010 > data</li><br/>
+                    <li>head -n 30 data</li>
+                    <p1>1.00 0.10</p1><br/>
+                    <p1>1.00 0.10</p1><br/>
+                    <p1>1.00 0.10</p1><br/>
+                    <p1>1.00 0.10</p1><br/>
+                    <p1>1.00 0.10</p1><br/>
+                    <p1>1.00 0.10</p1><br/>
+                    <p1>1.00 0.10</p1><br/>
+                    <p1>1.00 0.10</p1><br/>
+                    <p1>1.00 0.10</p1><br/>
+                    <p1>1.00 0.10</p1><br/>
+                    <p1>1.00 0.10</p1><br/>
+                    <p1>1.01 9.90</p1><br/>
+                    <p1>1.01 9.90</p1><br/>
+                    <p1>1.01 9.90</p1><br/>
+                    <p1>1.01 9.90</p1><br/>
+                    <p1>1.01 9.90</p1><br/>
+                    <p1>1.01 9.90</p1><br/>
+                    <p1>1.01 9.90</p1><br/>
+                    <p1>1.01 9.90</p1><br/>
+                    <p1>1.01 9.90</p1><br/>
+                    <p1>1.01 9.90</p1><br/>
+                    <p1>1.01 9.90</p1><br/>
+                    <p1>1.02 19.61</p1><br/>
+                    <p1>1.02 19.61</p1><br/>
+                    <p1>1.02 19.61</p1><br/>
+                    <p1>1.02 19.61</p1><br/>
+                    <p1>1.02 19.61</p1><br/>
+                    <p1>1.02 19.61</p1><br/>
+                    <p1>1.02 19.61</p1><br/>
+                    <p1>1.02 19.61</p1><br/>
                     <br/>
-                    <li>./106bombyx src</li>
-                    <p>my_ls.c main.c utils.c</p>
+                    <li>./106bombyx 10 3.3 > data</li><br/>
+                    <li>head data</li>
+                    <p1>1 10.00</p1><br/>
+                    <p1>2 32.67</p1><br/>
+                    <p1>3 104.29</p1><br/>
+                    <p1>4 308.26</p1><br/>
+                    <p1>5 703.68</p1><br/>
+                    <p1>6 688.10</p1><br/>
+                    <p1>7 708.24</p1><br/>
+                    <p1>8 681.89</p1><br/>
+                    <p1>9 715.82</p1><br/>
+                    <p1>10 671.29</p1><br/>
                     <br/>
-                    <li>./106bombyx /tmp</li>
-                    <p>testfile.txt sample.tar</p>
+                    <li>tail data</li>
+                    <p1>91 823.60</p1><br/>
+                    <p1>92 479.43</p1><br/>
+                    <p1>93 823.60</p1><br/>
+                    <p1>94 479.43</p1><br/>
+                    <p1>95 823.60</p1><br/>
+                    <p1>96 479.43</p1><br/>
+                    <p1>97 823.60</p1><br/>
+                    <p1>98 479.43</p1><br/>
+                    <p1>99 823.60</p1><br/>
+                    <p1>100 479.43</p1><br/>
                 </ul>
             </div>
         </div>
+        <br/>
     </body>
 </html>
