--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
         <div id="header"></div>
         <div class="container">
             <h3>Louis Gaspard</h3>
-            <p>Etudiant en deuxième année à EPITECH (nantes)</p>
+            <p>Etudiant en deuxième année à EPITECH (Nantes)</p>
             <p></p>
         </div>
     </body>
