--- a/html/projects/maths/107transfer.html
+++ b/html/projects/maths/107transfer.html
@@ -26,16 +26,49 @@
             <div class="shell-wrap">
                 <p class="shell-top-bar">/louis/projets/107transfer/</p>
                 <ul class="shell-body">
-                    <li>./107transfer</li>
-                    <p>my_ls lib src include Makefile</p>
+                    <li>./107transfer "0*1*2*3*4" "1" > file</li><br/>
+                    <li>head -n 12 file</li>
+                    <p1>0 -> 0.00000</p1><br/>
+                    <p1>0.001 -> 0.00100</p1><br/>
+                    <p1>0.002 -> 0.00201</p1><br/>
+                    <p1>0.003 -> 0.00302</p1><br/>
+                    <p1>0.004 -> 0.00403</p1><br/>
+                    <p1>0.005 -> 0.00505</p1><br/>
+                    <p1>0.006 -> 0.00607</p1><br/>
+                    <p1>0.007 -> 0.00710</p1><br/>
+                    <p1>0.008 -> 0.00813</p1><br/>
+                    <p1>0.009 -> 0.00916</p1><br/>
+                    <p1>0.01 -> 0.01020</p1><br/>
+                    <p1>0.011 -> 0.01125</p1><br/>
                     <br/>
-                    <li>./107transfer src</li>
-                    <p>my_ls.c main.c utils.c</p>
+                    <li>tail file</li>
+                    <p1>0.991 -> 9.73282</p1><br/>
+                    <p1>0.991 -> 9.73282</p1><br/>
+                    <p1>0.992 -> 9.76223</p1><br/>
+                    <p1>0.993 -> 9.79171</p1><br/>
+                    <p1>0.994 -> 9.82126</p1><br/>
+                    <p1>0.995 -> 9.85087</p1><br/>
+                    <p1>0.996 -> 9.88056</p1><br/>
+                    <p1>0.997 -> 9.91031</p1><br/>
+                    <p1>0.998 -> 9.94014</p1><br/>
+                    <p1>0.999 -> 9.97003</p1><br/>
+                    <p1>1 -> 10.00000</p1><br/>
                     <br/>
-                    <li>./107transfer /tmp</li>
-                    <p>testfile.txt sample.tar</p>
+                    <li>./107transfer "0*0*9" "1*3*5" "2*4*6" "8*8*8"> file</li><br/>
+                    <li>head file</li>
+                    <p1>0 -> 0.00000</p1><br/>
+                    <p1>0.001 -> 0.00000</p1><br/>
+                    <p1>0.002 -> 0.00001</p1><br/>
+                    <p1>0.003 -> 0.00002</p1><br/>
+                    <p1>0.004 -> 0.00004</p1><br/>
+                    <p1>0.005 -> 0.00006</p1><br/>
+                    <p1>0.006 -> 0.00008</p1><br/>
+                    <p1>0.007 -> 0.00011</p1><br/>
+                    <p1>0.008 -> 0.00014</p1><br/>
+                    <p1>0.009 -> 0.00018</p1><br/>
                 </ul>
             </div>
         </div>
+        <br/>
     </body>
 </html>
