added shell pages

--- a/html/header.html
+++ b/html/header.html
@@ -16,6 +16,9 @@
                         <li><a href="/my_printf">my_printf</a></li>
                         <li><a href="/my_ls">my_ls</a></li>
                         <li><a href="/my_sokoban">my_sokoban</a></li>
+                        <li><a href="/minishell1">minishell1</a></li>
+                        <li><a href="/minishell2">minishell2</a></li>
+                        <li><a href="/42sh">42sh</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
