--- a/html/projects/42sh.html
+++ b/html/projects/42sh.html
@@ -23,16 +23,27 @@
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
             <p style="text-align: center">Le but du projet "42sh" est de coder un programme similaire à la commande "ls" d'un interpréteur de commande.</p>
+            <br/><h2 style="text-align: center">Shell basique</h2>
             <div class="shell-wrap">
-                <p class="shell-top-bar">/louis/projets/42sh/</p>
+                <p class="shell-top-bar">/louis/projets/minishell1/</p>
                 <ul class="shell-body">
-                    <li>./42sh</li>
-                    <p>42sh lib src include Makefile</p>
+                    <li>ls</li>
+                    <p>minishell1 lib src include Makefile</p>
                     <br/>
-                    <li>./42sh src</li>
-                    <p>42sh.c main.c utils.c</p>
+                    <li>cd /tmp</li><br/>
+                    <li>ls</li>
+                    <p>testfile.txt sample.tar</p>
+                </ul>
+            </div>
+            <br/><h2 style="text-align: center">Minishell1</h2>
+            <div class="shell-wrap">
+                <p class="shell-top-bar">/louis/projets/minishell1/</p>
+                <ul class="shell-body">
+                    <li>ls</li>
+                    <p>minishell1 lib src include Makefile</p>
                     <br/>
-                    <li>./42sh /tmp</li>
+                    <li>cd /tmp</li><br/>
+                    <li>ls</li>
                     <p>testfile.txt sample.tar</p>
                 </ul>
             </div>
