--- a/html/projects/minishell1.html
+++ b/html/projects/minishell1.html
@@ -22,17 +22,28 @@
             <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/minishell1">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i>
             </a></h3>
-            <p style="text-align: center">Le but du projet "minishell1" est de coder un programme similaire à la commande "ls" d'un interpréteur de commande.</p>
+            <p style="text-align: center">Le but du projet "minishell1" est de coder un programme similaire à un interpréteur de commande basique.</p>
+            <br/><h2 style="text-align: center">Shell basique</h2>
             <div class="shell-wrap">
                 <p class="shell-top-bar">/louis/projets/minishell1/</p>
                 <ul class="shell-body">
-                    <li>./minishell1</li>
+                    <li>ls</li>
                     <p>minishell1 lib src include Makefile</p>
                     <br/>
-                    <li>./minishell1 src</li>
-                    <p>minishell1.c main.c utils.c</p>
+                    <li>cd /tmp</li><br/>
+                    <li>ls</li>
+                    <p>testfile.txt sample.tar</p>
+                </ul>
+            </div>
+            <br/><h2 style="text-align: center">Minishell1</h2>
+            <div class="shell-wrap">
+                <p class="shell-top-bar">/louis/projets/minishell1/</p>
+                <ul class="shell-body">
+                    <li>ls</li>
+                    <p>minishell1 lib src include Makefile</p>
                     <br/>
-                    <li>./minishell1 /tmp</li>
+                    <li>cd /tmp</li><br/>
+                    <li>ls</li>
                     <p>testfile.txt sample.tar</p>
                 </ul>
             </div>
