push target=_blank

--- a/html/projets/cpe.html
+++ b/html/projets/cpe.html
@@ -65,7 +65,7 @@
             <div class="timeline-body">
               <p>text</p>
               <p>
-                <a href="https://github.com/LouisGaspard/BSQ" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/BSQ" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/BSQ">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
@@ -82,7 +82,7 @@
             <div class="timeline-body">
               <p>text</p>
               <p>
-                <a href="https://github.com/LouisGaspard/Matchstick" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/Matchstick" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/Matchstick">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
@@ -99,7 +99,7 @@
             <div class="timeline-body">
               <p>text</p>
               <p>
-                <a href="https://github.com/LouisGaspard/Lem-in" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/Lem-in" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/Lem-in">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
