--- a/html/projets/maths.html
+++ b/html/projets/maths.html
@@ -65,7 +65,7 @@
             <div class="timeline-body">
               <p>Le but du projet "101pong" est d'afficher les coordonnées du vecteur de vitesse de la balle, les coordonnées de la balle a l'instant t+4 et si oui ou non la balle touchera la planche.</p>
               <p>
-                <a href="https://github.com/LouisGaspard/101pong" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/101pong" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/101pong">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
@@ -82,7 +82,7 @@
             <div class="timeline-body">
               <p>Le but du projet "102architect" est de.</p>
               <p>
-                <a href="https://github.com/LouisGaspard/102architect" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/102architect" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/102architect">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
@@ -99,7 +99,7 @@
             <div class="timeline-body">
               <p>Le but du projet "103cipher" est de crypter ou decrypter une ou plusieurs phrases.</p>
               <p>
-                <a href="https://github.com/LouisGaspard/103cipher" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/103cipher" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/103cipher">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
@@ -116,7 +116,7 @@
             <div class="timeline-body">
               <p>Le but du projet "104intersection" est de calcul d'intersection avec trois types d'objets dans l'espace : Cone, Sphère, Cylindre.</p>
               <p>
-                <a href="https://github.com/LouisGaspard/104intersection" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/104intersection" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/104intersection">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
@@ -133,7 +133,7 @@
             <div class="timeline-body">
               <p>Le but du projet "105torus" est de résoudre une équation du quatrième degré.</p>
               <p>
-                <a href="https://github.com/LouisGaspard/105torus" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/105torus" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/105torus">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
@@ -150,7 +150,7 @@
             <div class="timeline-body">
               <p>Le but du projet "106bombyx" est de.</p>
               <p>
-                <a href="https://github.com/LouisGaspard/106bombyx" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/106bombyx" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/106bombyx">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
@@ -167,7 +167,7 @@
             <div class="timeline-body">
               <p>Le but du projet "107transfer" est de.</p>
               <p>
-                <a href="https://github.com/LouisGaspard/107transfer" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/107transfer" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/107transfer">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
@@ -184,7 +184,7 @@
             <div class="timeline-body">
               <p>Le but du projet "108trigo" est de.</p>
               <p>
-                <a href="https://github.com/LouisGaspard/108trigo" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/108trigo" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/108trigo">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
@@ -201,7 +201,7 @@
             <div class="timeline-body">
               <p>Le but du projet "109titration" est de.</p>
               <p>
-                <a href="https://github.com/LouisGaspard/109titration" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/109titration" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/109titration">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
@@ -218,7 +218,7 @@
             <div class="timeline-body">
               <p>Le but du projet "110borwein" est de.</p>
               <p>
-                <a href="https://github.com/LouisGaspard/110borwein" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/110borwein" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/110borwein">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
