--- a/html/projets/shell.html
+++ b/html/projets/shell.html
@@ -64,7 +64,7 @@
             <div class="timeline-body">
               <p>Le but du projet "minishell1" est de coder un programme similaire à un interpréteur de commande basique.</p>
               <p>
-                <a href="https://github.com/LouisGaspard/minishell1" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/minishell1" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/minishell1">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
@@ -81,7 +81,7 @@
             <div class="timeline-body">
               <p>Le but du projet "minishell2" est de coder un programme similaire à un interpréteur de commande.</p>
               <p>
-                <a href="https://github.com/LouisGaspard/minishell2" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/minishell2" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/minishell2">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
@@ -98,7 +98,7 @@
             <div class="timeline-body">
               <p>Le but du projet "42sh" est de coder un programme similaire à un interpréteur de commande complet.</p>
               <p>
-                <a href="https://github.com/LouisGaspard/42sh" style="text-decoration:none">Github</a>
+                <a href="https://github.com/LouisGaspard/42sh" target="_blank" style="text-decoration:none">Github</a>
                 <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/42sh">
                 <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
               </p>
