--- a/html/projets/psu.html
+++ b/html/projets/psu.html
@@ -65,7 +65,7 @@
             <div class="timeline-body">
               <p>text</p>
               <p>
-                    <a href="https://github.com/LouisGaspard/my_printf" style="text-decoration:none">Github</a>
+                    <a href="https://github.com/LouisGaspard/my_printf" target="_blank" style="text-decoration:none">Github</a>
                     <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/my_printf">
                     <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
                 </p>
@@ -82,7 +82,7 @@
             <div class="timeline-body">
               <p>text</p>
               <p>
-                    <a href="https://github.com/LouisGaspard/my_ls" style="text-decoration:none">Github</a>
+                    <a href="https://github.com/LouisGaspard/my_ls" target="_blank" style="text-decoration:none">Github</a>
                     <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/my_ls">
                     <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
                 </p>
@@ -99,7 +99,7 @@
             <div class="timeline-body">
               <p>text</p>
               <p>
-                    <a href="https://github.com/LouisGaspard/my_sokoban" style="text-decoration:none">Github</a>
+                    <a href="https://github.com/LouisGaspard/my_sokoban" target="_blank" style="text-decoration:none">Github</a>
                     <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/my_sokoban">
                     <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
                   </p>
@@ -116,7 +116,7 @@
             <div class="timeline-body">
               <p>text</p>
               <p>
-                    <a href="https://github.com/LouisGaspard/Navy" style="text-decoration:none">Github</a>
+                    <a href="https://github.com/LouisGaspard/Navy" target="_blank" style="text-decoration:none">Github</a>
                     <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/Navy">
                     <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
                   </p>
@@ -133,7 +133,7 @@
               <div class="timeline-body">
                 <p>text</p>
                 <p>
-                        <a href="https://github.com/LouisGaspard/Tetris" style="text-decoration:none">Github</a>
+                        <a href="https://github.com/LouisGaspard/Tetris" target="_blank" style="text-decoration:none">Github</a>
                         <a style="font-size: 25px; margin-left: 10px" target="_blank" href="https://github.com/LouisGaspard/Tetris">
                         <i class="fa fa-md fa-github" aria-hidden="true"></i></a>
                       </p>
